Fixed the problem that placeholder of <InputPicker/> and <DatePicker/> not alignment with the input control. (#285)

--- a/styles/input-picker.less
+++ b/styles/input-picker.less
@@ -19,8 +19,8 @@
 
   &:not(.@{ns}picker-disabled) .@{ns}picker-toggle {
     position: absolute !important;
-    top: @picker-default-toggle-border-width;
-    left: 0;
+    top: -1px;
+    left: -1px;
   }
 
   &.@{ns}picker-focused {
